# pypika-orm

./: .bumpversion.cfg  Makefile  README.md  setup.cfg
.github/workflows/: release.yml  tests.yml
pypika_orm/: __init__.py  dialects.py  fields.py  manager.py  model.py  query.py
tests/: conftest.py  test_base.py  test_model.py  test_mysql.py  test_postgres.py  test_sqlite.py
