[wheel]
python-tag = py3

[metadata]
name = pypika-orm
version = attr: pypika_orm.__version__
url = https://github.com/klen/pypika-orm
description = Async ORM based on PyPika
long_description = file: README.md
long_description_content_type = text/markdown
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, pypika, orm, sql, databases
project_urls = 
	Documentation = https://github.com/klen/pypika-orm
	Source code = https://github.com/klen/pypika-orm
	Issue tracker = https://github.com/klen/pypika-orm/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = pypika_orm
include_package_data = True
python_requires = >= 3.7
install_requires =
    aio-databases >= 0.0.17
    pypika

[options.package_data]
pypika_orm =
    py.typed

[options.extras_require]
postgresql =
    asyncpg
mysql =
    aiomysql
sqlite =
    aiosqlite
tests = 
    pytest
    pytest-aio
    pytest-mypy
    aiosqlite
    asyncpg
    aiomysql

[pylama]
ignore = D,D203,D213,D401

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
    pytest tests

[mypy]
ignore_missing_imports = True

